--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,9 +12,9 @@ source:
 
 build:
   number: 0
-  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-
+  skip: True  # [py<36]
+    
 requirements:
   host:
     - regex
@@ -39,6 +39,7 @@ about:
   summary: a modern parsing library
   license: MIT
   license_file: LICENSE
+  dev_url: https://github.com/lark-parser/lark
 
 extra:
   recipe-maintainers:
