--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ about:
   license_file: LICENSE
   license_family: MIT
   dev_url: https://github.com/lark-parser/lark
+  doc_url: https://lark-parser.readthedocs.io/en/latest/
 
 extra:
   recipe-maintainers:
