adding python run and host requirements back

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,9 +19,11 @@ requirements:
   host:
     - regex
     - pip
+    - python
   run:
     - atomicwrites
     - js2py
+    - python
     - regex
 
 test:
