--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,8 @@ test:
   commands:
     - pip check
     # Skipping tests/test_nearley because the sdist is missing some test data files.
-    - pytest -v tests --ignore tests/test_nearley
+    - pytest -v tests --ignore tests/test_nearley  # [py>=310]
+    - pytest -v tests --ignore tests/test_nearley --ignore tests/test_pattern_matching.py  # [py<310]
   requires:
     - pip
     - pytest
