--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,26 +1,25 @@
 {% set name = "lark" %}
-{% set version = "1.2.2" %}
-
+{% set version = "1.3.1" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/lark-{{ version }}.tar.gz
-  sha256: ca807d0162cd16cef15a8feecb862d7319e7a09bdb13aef927968e45040fed80
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/lark-{{ version }}.tar.gz
+  sha256: b426a7a6d6d53189d318f2b6236ab5d6429eaf09259f1ca33eb716eed10d2905
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  skip: True  # [py<38]
-    
+  skip: true  # [py<38]
+
 requirements:
   host:
     - pip
     - python
-    - setuptools
-    - wheel
+    - setuptools >=80
+    - setuptools-scm >=9.2.2
   run:
     - python
   run_constrained:
@@ -28,7 +27,7 @@ requirements:
 
 test:
   source_files:
-  - tests
+    - tests
   imports:
     - lark
   commands:
